SERVER-16923 Create the system.profile collection if under DB X lock